добавлена поддержка scalebox (подключена библиотека graphicx по умолчанию). Без него компиляция проходила с ошибкой.

--- a/SCWorks.cls
+++ b/SCWorks.cls
@@ -10,6 +10,7 @@
 \RequirePackage{titlesec}
 \RequirePackage{titletoc}
 \RequirePackage{caption}
+\RequirePackage{graphicx}
 \RequirePackage[inline]{enumitem}
 
 
